--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ nvim-oxi = { version = "0.5.1", features = ["neovim-0-10", "test", "neovim-night
 thiserror = "1.0.64"
 dirs = "5.0.1"
 regex = "1.11.0"
+unicode-width = "0.2.0"
 
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
